dfir_rs/tests/compile-fail-stable/surface_merge_badtypes.rs
../compile-fail/surface_merge_badtypes.rs